fix(styles): reduce z-index of body element for better layering

--- a/src/components/Root/styles.css
+++ b/src/components/Root/styles.css
@@ -26,7 +26,7 @@ body {
   gap: 0.5rem;
   /* background-color: blue; */
   max-height: 40px;
-  z-index: 999999;
+  z-index: 10;
 }
 
 .fixed-header__wrapper {
